src/variationTable/parser.mjs
// @generated by Peggy 5.0.6.
//
// https://peggyjs.org/


class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    TkzTabDocument: peg$parseTkzTabDocument,
  };
  let peg$startRuleFunction = peg$parseTkzTabDocument;

  const peg$c0 = "$$";
  const peg$c1 = "\\begin{tikzpicture}";
  const peg$c2 = "\\end{tikzpicture}";
  const peg$c3 = "\\";
  const peg$c4 = "tkzTab";
  const peg$c5 = "{";
  const peg$c6 = "}";
  const peg$c7 = "tkzTabInit";
  const peg$c8 = "tkzTabLine";
  const peg$c9 = "tkzTabVar";
  const peg$c10 = "tkzTabVal";
  const peg$c11 = "tkzTabIma";
  const peg$c12 = "tkzTabSlope";
  const peg$c13 = ",";
  const peg$c14 = "/";
  const peg$c15 = "R";
  const peg$c16 = "\\{";
  const peg$c17 = "\\}";
  const peg$c18 = "\\\\";
  const peg$c19 = "[";
  const peg$c20 = "]";
  const peg$c21 = ".";

  const peg$r0 = /^[a-zA-Z]/;
  const peg$r1 = /^[,}]/;
  const peg$r2 = /^[+\-dhtz]/;
  const peg$r3 = /^[,}\n\r\t ]/;
  const peg$r4 = /^[+\-CDHVcdhv]/;
  const peg$r5 = /^[,\/}]/;
  const peg$r6 = /^[,]/;
  const peg$r7 = /^[{}]/;
  const peg$r8 = /^[0-9]/;
  const peg$r9 = /^[ \t\n\r]/;
  const peg$r10 = /^[ \t]/;

  const peg$e0 = peg$literalExpectation("$$", false);
  const peg$e1 = peg$literalExpectation("\\begin{tikzpicture}", false);
  const peg$e2 = peg$literalExpectation("\\end{tikzpicture}", false);
  const peg$e3 = peg$literalExpectation("\\", false);
  const peg$e4 = peg$literalExpectation("tkzTab", false);
  const peg$e5 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false, false);
  const peg$e6 = peg$literalExpectation("{", false);
  const peg$e7 = peg$literalExpectation("}", false);
  const peg$e8 = peg$literalExpectation("tkzTabInit", false);
  const peg$e9 = peg$literalExpectation("tkzTabLine", false);
  const peg$e10 = peg$literalExpectation("tkzTabVar", false);
  const peg$e11 = peg$literalExpectation("tkzTabVal", false);
  const peg$e12 = peg$literalExpectation("tkzTabIma", false);
  const peg$e13 = peg$literalExpectation("tkzTabSlope", false);
  const peg$e14 = peg$literalExpectation(",", false);
  const peg$e15 = peg$literalExpectation("/", false);
  const peg$e16 = peg$classExpectation([",", "}"], false, false, false);
  const peg$e17 = peg$classExpectation(["+", "-", "d", "h", "t", "z"], false, false, false);
  const peg$e18 = peg$classExpectation([",", "}", "\n", "\r", "\t", " "], false, false, false);
  const peg$e19 = peg$literalExpectation("R", false);
  const peg$e20 = peg$classExpectation(["+", "-", "C", "D", "H", "V", "c", "d", "h", "v"], false, false, false);
  const peg$e21 = peg$classExpectation([",", "/", "}"], false, false, false);
  const peg$e22 = peg$classExpectation([","], false, false, false);
  const peg$e23 = peg$classExpectation(["{", "}"], false, false, false);
  const peg$e24 = peg$anyExpectation();
  const peg$e25 = peg$literalExpectation("\\{", false);
  const peg$e26 = peg$literalExpectation("\\}", false);
  const peg$e27 = peg$literalExpectation("\\\\", false);
  const peg$e28 = peg$literalExpectation("[", false);
  const peg$e29 = peg$literalExpectation("]", false);
  const peg$e30 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e31 = peg$literalExpectation(".", false);
  const peg$e32 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false, false);
  const peg$e33 = peg$classExpectation([" ", "\t"], false, false, false);

  function peg$f0(body) {    return { type: "TkzTabDocument", body };  }
  function peg$f1(body) {    return { type: "TkzTabDocument", body };  }
  function peg$f2(rows, antecedents, signs, variations) {    return { type: "tkzTabShortcut", rows, antecedents, signs, variations };  }
  function peg$f3(rows, antecedents) {    return { type: "tkzTabInit", rows, antecedents };  }
  function peg$f4(elements) {    return { type: "tkzTabLine", elements };  }
  function peg$f5(elements) {    return { type: "tkzTabVar", elements };  }
  function peg$f6(start, end, pos, ant, img) {    return { type: "tkzTabVal", startRank: start, endRank: end, position: pos, antecedent: ant, image: img };  }
  function peg$f7(start, end, at, img) {    return { type: "tkzTabIma", startRank: start, endRank: end, atRank: at, image: img };  }
  function peg$f8(slopes) {    return { type: "tkzTabSlope", slopes };  }
  function peg$f9(rows) {    return rows;  }
  function peg$f10(label, h) {    return { label: makeLatex(label), height: h };  }
  function peg$f11(vals) {    return vals.map(makeLatex);  }
  function peg$f12(elems) {    return elems;  }
  function peg$f13() {    return { kind: "empty" };  }
  function peg$f14(kw) {    return { kind: "keyword", value: kw };  }
  function peg$f15(val) {    return val.trim() === "" ? { kind: "empty" } : { kind: "content", value: makeLatex(val) };  }
  function peg$f16(kw) {    return kw;  }
  function peg$f17(elems) {    return elems;  }
  function peg$f18() {    return {modifier: "R" };  }
  function peg$f19(mod, left, right) {    return { modifier: mod, left: makeLatex(left), right: makeLatex(right) };  }
  function peg$f20(slopes) {    return slopes;  }
  function peg$f21(rank, left, right) {    
         return { 
           atRank: rank, 
           leftValue: left.trim() === "" ? null : makeLatex(left),
           rightValue: right.trim() === "" ? null : makeLatex(right)
         }; 
  }
  function peg$f22(val) {    return makeLatexOrNull(val);  }
  function peg$f23(digits) {    return parseInt(digits.join(""), 10);  }
  function peg$f24(val) {    return parseFloat(val);  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseTkzTabDocument() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c0) {
      s3 = peg$c0;
      peg$currPos += 2;
    } else {
      s3 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s3 !== peg$FAILED) {
      s4 = peg$parse_();
      s3 = [s3, s4];
      s2 = s3;
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    if (s2 === peg$FAILED) {
      s2 = null;
    }
    if (input.substr(peg$currPos, 19) === peg$c1) {
      s3 = peg$c1;
      peg$currPos += 19;
    } else {
      s3 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s3 !== peg$FAILED) {
      s4 = peg$parse_();
      s5 = [];
      s6 = peg$parseTkzTabCommand();
      while (s6 !== peg$FAILED) {
        s5.push(s6);
        s6 = peg$parseTkzTabCommand();
      }
      s6 = peg$parse_();
      if (input.substr(peg$currPos, 17) === peg$c2) {
        s7 = peg$c2;
        peg$currPos += 17;
      } else {
        s7 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s7 !== peg$FAILED) {
        s8 = peg$parse_();
        s9 = peg$currPos;
        if (input.substr(peg$currPos, 2) === peg$c0) {
          s10 = peg$c0;
          peg$currPos += 2;
        } else {
          s10 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e0); }
        }
        if (s10 !== peg$FAILED) {
          s11 = peg$parse_();
          s10 = [s10, s11];
          s9 = s10;
        } else {
          peg$currPos = s9;
          s9 = peg$FAILED;
        }
        if (s9 === peg$FAILED) {
          s9 = null;
        }
        peg$savedPos = s0;
        s0 = peg$f0(s5);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parse_();
      s2 = [];
      s3 = peg$parseTkzTabCommand();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseTkzTabCommand();
      }
      s3 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f1(s2);
    }

    return s0;
  }

  function peg$parseTkzTabCommand() {
    let s0;

    s0 = peg$parseTkzTabShortcut();
    if (s0 === peg$FAILED) {
      s0 = peg$parseTkzTabInit();
      if (s0 === peg$FAILED) {
        s0 = peg$parseTkzTabLine();
        if (s0 === peg$FAILED) {
          s0 = peg$parseTkzTabVar();
          if (s0 === peg$FAILED) {
            s0 = peg$parseTkzTabVal();
            if (s0 === peg$FAILED) {
              s0 = peg$parseTkzTabIma();
              if (s0 === peg$FAILED) {
                s0 = peg$parseTkzTabSlope();
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseTkzTabShortcut() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17, s18, s19, s20, s21, s22, s23, s24, s25, s26, s27, s28, s29, s30;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 92) {
      s1 = peg$c3;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 6) === peg$c4) {
        s2 = peg$c4;
        peg$currPos += 6;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e4); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$currPos;
        peg$silentFails++;
        s4 = input.charAt(peg$currPos);
        if (peg$r0.test(s4)) {
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e5); }
        }
        peg$silentFails--;
        if (s4 === peg$FAILED) {
          s3 = undefined;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          s5 = peg$parseOptionalOptions();
          if (s5 === peg$FAILED) {
            s5 = null;
          }
          s6 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 123) {
            s7 = peg$c5;
            peg$currPos++;
          } else {
            s7 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e6); }
          }
          if (s7 !== peg$FAILED) {
            s8 = peg$parse_();
            s9 = peg$parseInitRows();
            if (s9 !== peg$FAILED) {
              s10 = peg$parse_();
              if (input.charCodeAt(peg$currPos) === 125) {
                s11 = peg$c6;
                peg$currPos++;
              } else {
                s11 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e7); }
              }
              if (s11 !== peg$FAILED) {
                s12 = peg$parse_();
                if (input.charCodeAt(peg$currPos) === 123) {
                  s13 = peg$c5;
                  peg$currPos++;
                } else {
                  s13 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e6); }
                }
                if (s13 !== peg$FAILED) {
                  s14 = peg$parse_();
                  s15 = peg$parseAntecedentList();
                  s16 = peg$parse_();
                  if (input.charCodeAt(peg$currPos) === 125) {
                    s17 = peg$c6;
                    peg$currPos++;
                  } else {
                    s17 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e7); }
                  }
                  if (s17 !== peg$FAILED) {
                    s18 = peg$parse_();
                    if (input.charCodeAt(peg$currPos) === 123) {
                      s19 = peg$c5;
                      peg$currPos++;
                    } else {
                      s19 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$e6); }
                    }
                    if (s19 !== peg$FAILED) {
                      s20 = peg$parse_();
                      s21 = peg$parseLineElementList();
                      if (s21 !== peg$FAILED) {
                        s22 = peg$parse_();
                        if (input.charCodeAt(peg$currPos) === 125) {
                          s23 = peg$c6;
                          peg$currPos++;
                        } else {
                          s23 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$e7); }
                        }
                        if (s23 !== peg$FAILED) {
                          s24 = peg$parse_();
                          if (input.charCodeAt(peg$currPos) === 123) {
                            s25 = peg$c5;
                            peg$currPos++;
                          } else {
                            s25 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$e6); }
                          }
                          if (s25 !== peg$FAILED) {
                            s26 = peg$parse_();
                            s27 = peg$parseVarElementList();
                            if (s27 !== peg$FAILED) {
                              s28 = peg$parse_();
                              if (input.charCodeAt(peg$currPos) === 125) {
                                s29 = peg$c6;
                                peg$currPos++;
                              } else {
                                s29 = peg$FAILED;
                                if (peg$silentFails === 0) { peg$fail(peg$e7); }
                              }
                              if (s29 !== peg$FAILED) {
                                s30 = peg$parse_();
                                peg$savedPos = s0;
                                s0 = peg$f2(s9, s15, s21, s27);
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTkzTabInit() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 92) {
      s1 = peg$c3;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 10) === peg$c7) {
        s2 = peg$c7;
        peg$currPos += 10;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e8); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        s4 = peg$parseOptionalOptions();
        if (s4 === peg$FAILED) {
          s4 = null;
        }
        s5 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 123) {
          s6 = peg$c5;
          peg$currPos++;
        } else {
          s6 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e6); }
        }
        if (s6 !== peg$FAILED) {
          s7 = peg$parse_();
          s8 = peg$parseInitRows();
          if (s8 !== peg$FAILED) {
            s9 = peg$parse_();
            if (input.charCodeAt(peg$currPos) === 125) {
              s10 = peg$c6;
              peg$currPos++;
            } else {
              s10 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e7); }
            }
            if (s10 !== peg$FAILED) {
              s11 = peg$parse_();
              if (input.charCodeAt(peg$currPos) === 123) {
                s12 = peg$c5;
                peg$currPos++;
              } else {
                s12 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e6); }
              }
              if (s12 !== peg$FAILED) {
                s13 = peg$parse_();
                s14 = peg$parseAntecedentList();
                s15 = peg$parse_();
                if (input.charCodeAt(peg$currPos) === 125) {
                  s16 = peg$c6;
                  peg$currPos++;
                } else {
                  s16 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e7); }
                }
                if (s16 !== peg$FAILED) {
                  s17 = peg$parse_();
                  peg$savedPos = s0;
                  s0 = peg$f3(s8, s14);
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTkzTabLine() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 92) {
      s1 = peg$c3;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 10) === peg$c8) {
        s2 = peg$c8;
        peg$currPos += 10;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e9); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        s4 = peg$parseOptionalOptions();
        if (s4 === peg$FAILED) {
          s4 = null;
        }
        s5 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 123) {
          s6 = peg$c5;
          peg$currPos++;
        } else {
          s6 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e6); }
        }
        if (s6 !== peg$FAILED) {
          s7 = peg$parse_();
          s8 = peg$parseLineElementList();
          if (s8 !== peg$FAILED) {
            s9 = peg$parse_();
            if (input.charCodeAt(peg$currPos) === 125) {
              s10 = peg$c6;
              peg$currPos++;
            } else {
              s10 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e7); }
            }
            if (s10 !== peg$FAILED) {
              s11 = peg$parse_();
              peg$savedPos = s0;
              s0 = peg$f4(s8);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTkzTabVar() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;
